--- a/checkin/templates/checkin/index.html
+++ b/checkin/templates/checkin/index.html
@@ -1,4 +1,11 @@
 {% extends 'checkin/layout/base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+ <!-- CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+{% endblock%}
 
 {% block content %}
     <form action="{% url 'index' %}" method="post">
@@ -6,12 +13,13 @@
         {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        <li{%  if message.tags %} class="alert alert-{{ message.tags }}" {% endif %} role="alert">{{ message }}</li>
         {% endfor %}
     </ul>
     {% endif %}
         {{form}}
-        <input type="submit" value="Submit"> 
+        <br/>
+        <button type="submit" class="btn btn-primary btn-lg btn-block">LOGIN</button>
     </form>
 
 {% endblock %}
