--- a/checkin/templates/checkin/layout/base.html
+++ b/checkin/templates/checkin/layout/base.html
@@ -2,25 +2,26 @@
 <html>
 
 <head>
-    <title>Design Hub Check In System</title>
-<!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+{%  block head %}
+{% endblock %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
     <div class="container">
-        <div class="page-header">
-            <h1><a href="/">Design Hub Check In System</a></h1>
-            <ul>
+        <nav class=" navbar navbar-dark bg-dark page-header" >
+            <h1><a href="/">DESIGN HUB CHECKIN</a></h1>
+            <ul class="navbar-nav" >
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item" ><a class="btn btn-danger" role="button" href="{% url 'logout' %}">Logout</a></li>
                 {% endif%}
             </ul>
-        </div>
+        </nav>
         {% block content %}
         {% endblock %}
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    {% block scripts %}
+    {% endblock %}
 </body>
