--- a/checkin/templates/checkin/mainpage.html
+++ b/checkin/templates/checkin/mainpage.html
@@ -1,7 +1,24 @@
+
+
 {% extends 'checkin/layout/base.html' %}
+{% load static %}
+
+{%  block head %}
+    <title>Design Hub Check In System</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    {% endblock %}
+
 
 {% block content %}
 
+
+<ul class="messages">
+    {% for message in messages %}
+    <li{%  if message.tags %} class=" alert alert-{{ message.tags }} "{% endif %} role="alert">{{ message }}</li>
+    {% endfor %}
+</ul>
 
 <!-- Large modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-add-user-modal-lg">Add New
@@ -40,16 +57,22 @@
 {% if visitors_list %}
 <div>
 
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <select  class="custom-select" id="searcg-form-input" name="searcg-form-input">
-                <option value="1" selected>Filter By (Name)</option>
-                <option value="2">Company</option>
-                <option value="3">Telphone Number</option>
-              </select>
-        </div>
+    <div  id="search-place" class="input-group mb-3">
         <input type="text" class="form-control" id="search-vistors" aria-label="Search Visitors Here" type="search"
-            placeholder="Search Vistors Here">
+            placeholder="Search Vistors Here">  
+        <div class="input-group-append">
+            <div class="input-group">
+                <select  class="custom-select" id="search-form-input" name="searcg-form-input">
+                    <option value="1" selected>Filter By (Name)</option>
+                    <option value="2">Company</option>
+                    <option value="3">Telphone Number</option>
+                  </select>
+            </div>
+            <div class="input-group-text">
+              <input id="search-unique-check-box" name="search-unique-check-box" type="checkbox" aria-label="Checkbox for following text input">
+            </div>
+            <span class="input-group-text" id="">Remove Duplicates</span>
+          </div>
     </div>
 
 
@@ -65,7 +88,7 @@
             </tr>
             {% for visitor in visitors_list %}
 
-            <tr>
+            <tr id="user-{{visitor.visitor.id}}">
                 <td>{{visitor.created_date}}</td>
                 <td>{{visitor.visitor.name}}</td>
                 <td>{{visitor.visitor.company}}</td>
@@ -86,26 +109,12 @@
     </div>
 </div>
 {% endif %}
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var search_input = document.querySelector('#search-vistors');
-        search_input.addEventListener('keyup', function () {
-            var input, filter, ul, li, a, i, txtValue;
-            input = document.getElementById("search-vistors");
-            var search_by = document.getElementById("searcg-form-input").value;
-            filter = input.value.toUpperCase();
-            ul = document.getElementById("myUL");
-            li = ul.querySelectorAll('tr:not(:first-child)')
-            for (i = 0; i < li.length; i++) {
-                a = li[i].getElementsByTagName("td")[search_by];
-                txtValue = a.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    li[i].style.display = "";
-                } else {
-                    li[i].style.display = "none";
-                }
-            }
-        });
-    })
-</script>
+
+{% endblock %}
+
+
+{% block scripts %}
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="{% static 'js/table.js' %}"></script>
 {% endblock %}
